--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -42,7 +42,8 @@ body * {
 }
 
 #container {
-    width: 360px;
+    width: 100%;
+    max-width: 588px;
     border: none;
     margin: auto;
     padding: 0 24px;
@@ -81,11 +82,15 @@ body * {
     left: 0;
     transform: translateY(-50%);
     top: 50%;
+    animation: slide-back 0.2s;
 }
 
 .light #switch button {
-    right: 0;
-    left: initial;
+    animation: slide-in 0.2s forwards;
+}
+
+#switch button:hover {
+    outline: 8px solid var(--highlight-color)
 }
 
 
@@ -163,3 +168,22 @@ footer {
     padding: 24px 0;
     text-align: center;
 }
+
+/* animation */
+@keyframes  slide-in {
+    from {
+        left: 0;
+    }
+    to {
+        left: 50%;    
+    }
+}
+@keyframes slide-back {
+    from {
+        left: 50%;
+    }
+    to {
+        left: 0%;
+    }
+}
+
